created the style and html

--- a/index.html
+++ b/index.html
@@ -29,8 +29,69 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      
-      <!-- Timeblocks go here -->
+      <div id="nine" class="row time-block">
+        <div class="col-md-1 hour">9AM</div>
+        <textarea class="col-md-10 task"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <span class="fas fa-save"></span>
+        </button>
+      </div>
+      <div id="ten" class="row time-block">
+        <div class="col-md-1 hour">10AM </div>
+        <textarea class="col-md-10 task"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <span class="fas fa-save"></span>
+        </button>
+      </div>
+      <div id="eleven" class="row time-block">
+        <div class="col-md-1 hour">11AM </div>
+        <textarea class="col-md-10 task"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <span class="fas fa-save"></span>
+        </button>
+      </div>
+      <div id="twelve" class="row time-block">
+        <div class="col-md-1 hour">12PM </div>
+        <textarea class="col-md-10 task"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <span class="fas fa-save"></span>
+        </button>
+      </div>
+      <div id="one" class="row time-block">
+        <div class="col-md-1 hour">1PM</div>
+        <textarea class="col-md-10 task"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <span class="fas fa-save"></span>
+        </button>
+      </div>
+      <div id="two" class="row time-block">
+        <div class="col-md-1 hour">2PM</div>
+        <textarea class="col-md-10 task"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <span class="fas fa-save"></span>
+        </button>
+      </div>
+      <div id="three" class="row time-block">
+        <div class="col-md-1 hour">3PM</div>
+        <textarea class="col-md-10 task"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <span class="fas fa-save"></span>
+        </button>
+      </div>
+      <div id="four" class="row time-block">
+        <div class="col-md-1 hour">4PM</div>
+        <textarea class="col-md-10 task"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <span class="fas fa-save"></span>
+        </button>
+      </div>
+      <div id="five" class="row time-block">
+        <div class="col-md-1 hour">5PM</div>
+        <textarea class="col-md-10 task"> </textarea>
+        <button class="btn saveBtn col-md-1">
+          <span class="fas fa-save"></span>
+        </button>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
