--- a/index.html
+++ b/index.html
@@ -4,45 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    //The link to bootstrap. 
+    <!-- The link to bootstrap --> 
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    // The link to font awesome from which I selected the save button icon. 
+    <!-- The link to font awesome from which I selected the save button icon. --> 
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
-    //The link to google fonts. 
+    <!-- The link to google fonts. --> 
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    //The title of the page.
+    <!-- The title of the page.--> 
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
     <header class="jumbotron">
-      //The description of the schedule appears in the header and contains the description mentioned below.
+      <!-- The description of the schedule appears in the header and contains the description mentioned below.--> 
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      //The today date appears in the bellow paragraph.
+      <!-- The today date appears in the bellow paragraph.--> 
       <p id="currentDay" class="lead"></p>
     </header>
-    // all hours, tasks, and save buttons are created in this container.
+    <!--  All hours, tasks, and save buttons are created in this container.--> 
     <div class="container">
-      // Bellow are created nine div elements and each of them contain another div that represent the hour, an textarea element that represent the task which is introduced by the user, and a button element which save the user task.
+      <!--  Bellow are created nine div elements and each of them contain another div that represent the hour, an textarea element that represent the task which is introduced by the user, and a button element which save the user task.--> 
       <div id="nine" class="row time-block">
-        // Each hour div use one of the twelves columns of the bootstrap extension.
+        <!-- Each hour div use one of the twelves columns of the bootstrap extension.--> 
         <div class="col-md-1 hour">9AM</div>
-        // Each textarea element use ten of the twelves columns of the bootstrap extension.
+        <!-- Each textarea element use ten of the twelves columns of the bootstrap extension.--> 
         <textarea class="col-md-10 task"> </textarea>
-        // Each save button element use one of the twelves columns of the bootstrap extension.
+        <!--  Each save button element use one of the twelves columns of the bootstrap extension.--> 
         <button class="btn saveBtn col-md-1">
           <span class="fas fa-save"></span>
         </button>
