cooments in the html file regarding Moment.js link

--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
         </button>
       </div>
     </div>
-
+<!-- The link yto jQuery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- The link to moment.js which help to set the current date and time in different formats --> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
 </html>
