linked the script file and added comments to it

--- a/index.html
+++ b/index.html
@@ -108,5 +108,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- The link to moment.js which help to set the current date and time in different formats --> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
+
   </body>
 </html>
