reset the colors

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!--  All hours, tasks, and save buttons are created in this container.--> 
     <div class="container">
       <!--  Bellow are created nine div elements and each of them contain another div that represent the hour, an textarea element that represent the task which is introduced by the user, and a button element which save the user task.--> 
-      <div id="nine" class="row time-block">
+      <div id="nine" val="9am" class="row time-block">
         <!-- Each hour div use one of the twelves columns of the bootstrap extension.--> 
         <div class="col-md-1 hour">9AM</div>
         <!-- Each textarea element use ten of the twelves columns of the bootstrap extension.--> 
@@ -47,56 +47,56 @@
           <span class="fas fa-save"></span>
         </button>
       </div>
-      <div id="ten" class="row time-block">
+      <div id="ten" val="10am" class="row time-block">
         <div class="col-md-1 hour">10AM </div>
         <textarea class="col-md-10 task"> </textarea>
         <button class="btn saveBtn col-md-1">
           <span class="fas fa-save"></span>
         </button>
       </div>
-      <div id="eleven" class="row time-block">
+      <div id="eleven" val="11am"  class="row time-block">
         <div class="col-md-1 hour">11AM </div>
         <textarea class="col-md-10 task"> </textarea>
         <button class="btn saveBtn col-md-1">
           <span class="fas fa-save"></span>
         </button>
       </div>
-      <div id="twelve" class="row time-block">
+      <div id="twelve" val="12pm" class="row time-block">
         <div class="col-md-1 hour">12PM </div>
         <textarea class="col-md-10 task"> </textarea>
         <button class="btn saveBtn col-md-1">
           <span class="fas fa-save"></span>
         </button>
       </div>
-      <div id="one" class="row time-block">
+      <div id="one" val="1pm" class="row time-block">
         <div class="col-md-1 hour">1PM</div>
         <textarea class="col-md-10 task"> </textarea>
         <button class="btn saveBtn col-md-1">
           <span class="fas fa-save"></span>
         </button>
       </div>
-      <div id="two" class="row time-block">
+      <div id="two" val="2pm" class="row time-block">
         <div class="col-md-1 hour">2PM</div>
         <textarea class="col-md-10 task"> </textarea>
         <button class="btn saveBtn col-md-1">
           <span class="fas fa-save"></span>
         </button>
       </div>
-      <div id="three" class="row time-block">
+      <div id="three" val="3pm" class="row time-block">
         <div class="col-md-1 hour">3PM</div>
         <textarea class="col-md-10 task"> </textarea>
         <button class="btn saveBtn col-md-1">
           <span class="fas fa-save"></span>
         </button>
       </div>
-      <div id="four" class="row time-block">
+      <div id="four" val="4pm" class="row time-block">
         <div class="col-md-1 hour">4PM</div>
         <textarea class="col-md-10 task"> </textarea>
         <button class="btn saveBtn col-md-1">
           <span class="fas fa-save"></span>
         </button>
       </div>
-      <div id="five" class="row time-block">
+      <div id="five" val="5pm" class="row time-block">
         <div class="col-md-1 hour">5PM</div>
         <textarea class="col-md-10 task"> </textarea>
         <button class="btn saveBtn col-md-1">
